cabal-version: 2.4

name: perc
version: 1.0
synopsis: markdown to html for werc
description: see README.md

license: ISC
license-file: LICENSE
author: Yestin L. Harrison
maintainer: yestin@ylh.io
extra-source-files: README.md

executable perc
  hs-source-dirs: .
  main-is: Main.hs
  build-depends: base, pandoc, bytestring, text, data-default
  default-language: Haskell2010
  default-extensions: OverloadedStrings, LambdaCase, TupleSections
